# ethereum-client

./: .gitignore  Cargo.toml  README.md  build.rs  config.toml  docker-compose.yaml
.github/workflows/: linter.yml
proto/: aura.proto  chainlink.proto
src/: config.rs  lib.rs  main.rs
src/common/: balance.rs  mod.rs  price.rs
src/contracts/: aura.rs  balancer.rs  mod.rs
src/grpc/: mod.rs
src/grpc/aura_service/: mod.rs  service.rs
src/grpc/chainlink_service/: mod.rs  service.rs
src/http/: aura_response.rs  balance_response.rs  errors.rs  ethereum.rs  mod.rs
src/repositories/: ethereum.rs  ethereum_http.rs  ethereum_ws.rs  mod.rs
src/resources/contracts/: aura_abi.json  balancer_gauge_abi.json
src/routes/: aura_response.rs  balance_response.rs  ethereum.rs  mod.rs
src/services/: ethereum.rs  mod.rs
tests/: ethereum_http_integration.rs
