[package]
name = "ethereum-client"
version = "0.1.0"
edition = "2021"

default-run = "ethereum-client"

[dependencies]
log = "0.4"
env_logger = "0.11.6"
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.12.3"
prost = "0.13.4"

ethers = {  version = "2.0.14", features = ["abigen-offline"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.19"
thiserror = "2.0.11"

[build-dependencies]
tonic-build = "0.12.3"
